// Vitest Snapshot v1

exports[`BitTorrent > render correctly 1`] = `
"<vuecomponent-stub loaderheight=\\"4\\" tag=\\"div\\" flat=\\"true\\">
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderPrivacy</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableDHT\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enablePeX\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableLPD\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableAnonymous\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentQueue\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveDownload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"max_active_uploads\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveUpload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"6\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveTorrent\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.excludeSlowTorrent\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.downloadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.uploadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentInactivityTimer\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderSeedLimits</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenRatioReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenSeedingTimeReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub> then </vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" appendicon=\\"$dropdown\\" backgroundcolor=\\"\\" dense=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"text\\" valuecomparator=\\"[Function]\\" nodatatext=\\"$vuetify.noDataText\\" items=\\"[object Object],[object Object],[object Object],[object Object]\\" itemcolor=\\"primary\\" itemdisabled=\\"disabled\\" itemtext=\\"text\\" itemvalue=\\"value\\" menuprops=\\"[object Object]\\" smallchips=\\"true\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
</vuecomponent-stub>"
`;

exports[`BitTorrent > render correctly when anonymous_mode is false 1`] = `
"<vuecomponent-stub loaderheight=\\"4\\" tag=\\"div\\" flat=\\"true\\">
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderPrivacy</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableDHT\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enablePeX\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableLPD\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableAnonymous\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentQueue\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveDownload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"max_active_uploads\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveUpload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"6\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveTorrent\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.excludeSlowTorrent\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.downloadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.uploadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentInactivityTimer\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderSeedLimits</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenRatioReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenSeedingTimeReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub> then </vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" appendicon=\\"$dropdown\\" backgroundcolor=\\"\\" dense=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"text\\" valuecomparator=\\"[Function]\\" nodatatext=\\"$vuetify.noDataText\\" items=\\"[object Object],[object Object],[object Object],[object Object]\\" itemcolor=\\"primary\\" itemdisabled=\\"disabled\\" itemtext=\\"text\\" itemvalue=\\"value\\" menuprops=\\"[object Object]\\" smallchips=\\"true\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
</vuecomponent-stub>"
`;

exports[`BitTorrent > render correctly when dont_count_slow_torrents is false 1`] = `
"<vuecomponent-stub loaderheight=\\"4\\" tag=\\"div\\" flat=\\"true\\">
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderPrivacy</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableDHT\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enablePeX\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableLPD\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableAnonymous\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentQueue\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveDownload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"max_active_uploads\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveUpload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"6\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveTorrent\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.excludeSlowTorrent\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub disabled=\\"true\\" errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.downloadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub disabled=\\"true\\" errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.uploadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub disabled=\\"true\\" errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentInactivityTimer\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderSeedLimits</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenRatioReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenSeedingTimeReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub> then </vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" appendicon=\\"$dropdown\\" backgroundcolor=\\"\\" dense=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"text\\" valuecomparator=\\"[Function]\\" nodatatext=\\"$vuetify.noDataText\\" items=\\"[object Object],[object Object],[object Object],[object Object]\\" itemcolor=\\"primary\\" itemdisabled=\\"disabled\\" itemtext=\\"text\\" itemvalue=\\"value\\" menuprops=\\"[object Object]\\" smallchips=\\"true\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
</vuecomponent-stub>"
`;

exports[`BitTorrent > render correctly when max_active_downloads is 2 1`] = `
"<vuecomponent-stub loaderheight=\\"4\\" tag=\\"div\\" flat=\\"true\\">
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderPrivacy</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableDHT\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enablePeX\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableLPD\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableAnonymous\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentQueue\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"2\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveDownload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"max_active_uploads\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveUpload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"6\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveTorrent\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.excludeSlowTorrent\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.downloadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.uploadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentInactivityTimer\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderSeedLimits</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenRatioReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenSeedingTimeReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub> then </vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" appendicon=\\"$dropdown\\" backgroundcolor=\\"\\" dense=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"text\\" valuecomparator=\\"[Function]\\" nodatatext=\\"$vuetify.noDataText\\" items=\\"[object Object],[object Object],[object Object],[object Object]\\" itemcolor=\\"primary\\" itemdisabled=\\"disabled\\" itemtext=\\"text\\" itemvalue=\\"value\\" menuprops=\\"[object Object]\\" smallchips=\\"true\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
</vuecomponent-stub>"
`;

exports[`BitTorrent > render correctly when max_active_torrents is 3 1`] = `
"<vuecomponent-stub loaderheight=\\"4\\" tag=\\"div\\" flat=\\"true\\">
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderPrivacy</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableDHT\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enablePeX\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableLPD\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableAnonymous\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentQueue\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveDownload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"max_active_uploads\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveUpload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"3\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveTorrent\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.excludeSlowTorrent\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.downloadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.uploadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentInactivityTimer\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderSeedLimits</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenRatioReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenSeedingTimeReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub> then </vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" appendicon=\\"$dropdown\\" backgroundcolor=\\"\\" dense=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"text\\" valuecomparator=\\"[Function]\\" nodatatext=\\"$vuetify.noDataText\\" items=\\"[object Object],[object Object],[object Object],[object Object]\\" itemcolor=\\"primary\\" itemdisabled=\\"disabled\\" itemtext=\\"text\\" itemvalue=\\"value\\" menuprops=\\"[object Object]\\" smallchips=\\"true\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
</vuecomponent-stub>"
`;

exports[`BitTorrent > render correctly when max_ratio_enabled is false 1`] = `
"<vuecomponent-stub loaderheight=\\"4\\" tag=\\"div\\" flat=\\"true\\">
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderPrivacy</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableDHT\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enablePeX\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableLPD\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableAnonymous\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentQueue\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveDownload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"max_active_uploads\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveUpload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"6\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveTorrent\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.excludeSlowTorrent\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.downloadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.uploadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentInactivityTimer\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderSeedLimits</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenRatioReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub disabled=\\"true\\" errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenSeedingTimeReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub> then </vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" appendicon=\\"$dropdown\\" backgroundcolor=\\"\\" dense=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"text\\" valuecomparator=\\"[Function]\\" nodatatext=\\"$vuetify.noDataText\\" items=\\"[object Object],[object Object],[object Object],[object Object]\\" itemcolor=\\"primary\\" itemdisabled=\\"disabled\\" itemtext=\\"text\\" itemvalue=\\"value\\" menuprops=\\"[object Object]\\" smallchips=\\"true\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
</vuecomponent-stub>"
`;

exports[`BitTorrent > render correctly when max_seeding_time_enabled is false 1`] = `
"<vuecomponent-stub loaderheight=\\"4\\" tag=\\"div\\" flat=\\"true\\">
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderPrivacy</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableDHT\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enablePeX\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableLPD\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableAnonymous\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentQueue\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveDownload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"max_active_uploads\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveUpload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"6\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveTorrent\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.excludeSlowTorrent\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.downloadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.uploadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentInactivityTimer\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderSeedLimits</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenRatioReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenSeedingTimeReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub disabled=\\"true\\" errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub> then </vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" appendicon=\\"$dropdown\\" backgroundcolor=\\"\\" dense=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"text\\" valuecomparator=\\"[Function]\\" nodatatext=\\"$vuetify.noDataText\\" items=\\"[object Object],[object Object],[object Object],[object Object]\\" itemcolor=\\"primary\\" itemdisabled=\\"disabled\\" itemtext=\\"text\\" itemvalue=\\"value\\" menuprops=\\"[object Object]\\" smallchips=\\"true\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
</vuecomponent-stub>"
`;

exports[`BitTorrent > render correctly when queueing_enabled is false 1`] = `
"<vuecomponent-stub loaderheight=\\"4\\" tag=\\"div\\" flat=\\"true\\">
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderPrivacy</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableDHT\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enablePeX\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableLPD\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableAnonymous\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentQueue\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub disabled=\\"true\\" errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveDownload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub disabled=\\"true\\" errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"max_active_uploads\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveUpload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub disabled=\\"true\\" errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"6\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveTorrent\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.excludeSlowTorrent\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.downloadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.uploadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentInactivityTimer\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderSeedLimits</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenRatioReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenSeedingTimeReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub> then </vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" appendicon=\\"$dropdown\\" backgroundcolor=\\"\\" dense=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"text\\" valuecomparator=\\"[Function]\\" nodatatext=\\"$vuetify.noDataText\\" items=\\"[object Object],[object Object],[object Object],[object Object]\\" itemcolor=\\"primary\\" itemdisabled=\\"disabled\\" itemtext=\\"text\\" itemvalue=\\"value\\" menuprops=\\"[object Object]\\" smallchips=\\"true\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
</vuecomponent-stub>"
`;

exports[`BitTorrent > render correctly when slow_torrent_dl_rate_threshold is 25 1`] = `
"<vuecomponent-stub loaderheight=\\"4\\" tag=\\"div\\" flat=\\"true\\">
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderPrivacy</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableDHT\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enablePeX\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableLPD\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableAnonymous\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentQueue\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveDownload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"max_active_uploads\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveUpload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"6\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveTorrent\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.excludeSlowTorrent\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"25\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.downloadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.uploadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentInactivityTimer\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderSeedLimits</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenRatioReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenSeedingTimeReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub> then </vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" appendicon=\\"$dropdown\\" backgroundcolor=\\"\\" dense=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"text\\" valuecomparator=\\"[Function]\\" nodatatext=\\"$vuetify.noDataText\\" items=\\"[object Object],[object Object],[object Object],[object Object]\\" itemcolor=\\"primary\\" itemdisabled=\\"disabled\\" itemtext=\\"text\\" itemvalue=\\"value\\" menuprops=\\"[object Object]\\" smallchips=\\"true\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
</vuecomponent-stub>"
`;

exports[`BitTorrent > render correctly when slow_torrent_ul_rate_threshold is 24 1`] = `
"<vuecomponent-stub loaderheight=\\"4\\" tag=\\"div\\" flat=\\"true\\">
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderPrivacy</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableDHT\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enablePeX\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableLPD\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.enableAnonymous\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentQueue\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveDownload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"max_active_uploads\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveUpload\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"6\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.maxActiveTorrent\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.excludeSlowTorrent\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.downloadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"24\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.uploadRateLimit\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.torrentInactivityTimer\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub insert=\\"\\"></vuecomponent-stub>
  <vuecomponent-stub>modals.settings.pageBittorrent.subHeaderSeedLimits</vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenRatioReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" backgroundcolor=\\"\\" hidedetails=\\"true\\" label=\\"modals.settings.pageBittorrent.whenSeedingTimeReaches\\" ripple=\\"true\\" valuecomparator=\\"[Function]\\" inputvalue=\\"true\\" indeterminateicon=\\"$checkboxIndeterminate\\" officon=\\"$checkboxOff\\" onicon=\\"$checkboxOn\\" class=\\"ma-0 pa-0\\"></vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" value=\\"1\\" backgroundcolor=\\"\\" dense=\\"true\\" hidedetails=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"number\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
  <vuecomponent-stub activeclass=\\"\\" tag=\\"div\\">
    <vuecomponent-stub tag=\\"div\\" dense=\\"true\\">
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub> then </vuecomponent-stub>
      </vuecomponent-stub>
      <vuecomponent-stub tag=\\"div\\">
        <vuecomponent-stub errorcount=\\"1\\" errormessages=\\"\\" messages=\\"\\" rules=\\"\\" successmessages=\\"\\" appendicon=\\"$dropdown\\" backgroundcolor=\\"\\" dense=\\"true\\" loaderheight=\\"2\\" clearicon=\\"$clear\\" outlined=\\"true\\" type=\\"text\\" valuecomparator=\\"[Function]\\" nodatatext=\\"$vuetify.noDataText\\" items=\\"[object Object],[object Object],[object Object],[object Object]\\" itemcolor=\\"primary\\" itemdisabled=\\"disabled\\" itemtext=\\"text\\" itemvalue=\\"value\\" menuprops=\\"[object Object]\\" smallchips=\\"true\\" class=\\"mb-2\\"></vuecomponent-stub>
      </vuecomponent-stub>
    </vuecomponent-stub>
  </vuecomponent-stub>
</vuecomponent-stub>"
`;
